--- a/challenge_03/cursohtml.html
+++ b/challenge_03/cursohtml.html
@@ -19,7 +19,10 @@
         target="_blanket" style="margin-left: 40%; text-decoration: none; color: white;">
             Watch the full course!
         </a>
-        <a href="index.html"><img src="../img/voltar.png" alt=""></a>
+        <div style="margin-left: 45%; margin-top: 15px;">
+            <a href="index.html"><img src="../img/voltar.png" alt=""></a>
+        </div>
+        
    </div>
 
 </body>
