--- a/challenge_03/index.html
+++ b/challenge_03/index.html
@@ -13,11 +13,11 @@
         <div style=" margin-left: 25%; margin-right: auto;">
             <div>
                <a href="cursohtml.html"><img src="../img/thumb-html.png" alt="curso html"></a> 
-                <img src="../img/thumb-hardware.png" alt="curso hardware">
+               <a href="cursohardware.html"><img src="../img/thumb-hardware.png" alt="curso hardware"></a> 
             </div>
             <div>
-                <img src="../img/thumb-js.png" alt="curso javascript">
-                <img src="../img/thumb-python.png" alt="curso python">
+               <a href="cursojava.html"><img src="../img/thumb-js.png" alt="curso javascript"></a> 
+                <a href="sejaumprogra.html"><img src="../img/thumb-python.png" alt="curso python"></a>
             </div>
         </div>
         
