--- a/challenge_03/sejaumprogra.html
+++ b/challenge_03/sejaumprogra.html
@@ -28,7 +28,18 @@
 <body>
     <h1>Phyton Course</h1>
     <div>
-        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div>
+        <div>
+            <a href="https://www.youtube.com/playlist?list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0"
+            target="_blanket">
+                Watch full course!!
+            </a>
+        </div>
+        <a href="index.html">
+            <img src="../img/voltar.png" alt="back">
+        </a>
     </div>
 </body>
 </html>
